<resources>
    <string name="app_name">Just Java</string>
    <string name="text_quantity">QUANTITY</string>
    <string name="text_0">0</string>
    <string name="text_order">ORDER</string>
    <string name="text_price">PRICE</string>
    <string name="increment_text">+</string>
    <string name="decrement_text">-</string>
    <string name="text_toppings">TOPPINGS</string>
    <string name="text_whipped_cream">Whipped cream</string>
    <string name="text_chocolate">Chocolate</string>
</resources>
